src/components/principal/unit/resource/resource.css
.resource-wrapper {
  display: inline-grid;
  :create ;
  position: relative;
  margin-right: 5px;
  text-align: center;
  font-size: larger;
  width: 100%;
}

.odd {
  background-color: #e9f8fc;
}

.even {
  background-color: #e9f8fc;
}

.resource-name {
  grid-column: 2 / span 1;
  grid-row: 2 / span 2;
  font-size: medium;
  margin: 4px;
}

.resource-name-summary {
  grid-column: 2 / span 2;
  grid-row: 2 / span 2;
  font-size: small;
  padding-right: 20%;
  font-weight: 600;
}

.resource-crew-number-summary {
  grid-column: 2 / span 2;
  grid-row: 3 / span 2;
  font-size: small;
  padding-right: 20%;
  font-weight: 600;
}

.resource-identification-number-summary {
  grid-column: 3 / span 2;
  grid-row: 2 / span 2;
  font-size: x-large;
  grid-gap: 100px;
}

.resource-plate-number {
  grid-column-start: 2;
  grid-column-end: 2;
  grid-row-start: 1;
  grid-row-end: 1;
  text-align: center;
  font-size: medium;
}

.resource-head-of-crew,
.resource-crew-member {
  grid-column-start: 1;
  grid-column-end: 4;
  text-align: center;
  font-size: smaller;
  margin-right: 7px;
}

.resource-head-of-crew {
  background-color: #82c1dc;
}

.resource-identification-number {
  grid-column-start: 3;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 2;
  font-size: large;
  margin: 4px;
}

.resource-element-container {
  margin: 0px;
  color: #616161;
}

.resource-container {
  position: absolute;
  left: 0px;
  top: 15px;
  z-index: 1000;
}

.last-updated {
  text-align: center;
  color: #616161;
  overflow: hidden;
}

.resource {
  background-color: #d2f0f9;
  border: 2px solid #5eb5e8;
}

.fade-enter-active,
.fade-leave-active {
  transition: opacity 0.3s;
}
.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
  opacity: 0;
}

.status-available {
  background-color: #00897b;
  grid-row: 1 / span 4;
  grid-column: 1 / span 1;
  width: 20px;
}

.status-in-mission {
  background-color: #F74356;
  grid-row: 1 / span 4;
  grid-column: 1 / span 1;
  margin-left: -1px;
  width: 20px;
}

.status-in-mission-wrapper {
  border : 3px #F74356 solid;
}

.status-in-mission-identification-number{
  color: #F74356;
}

.status-unavailable {
  background-color: #616161;
  grid-row: 1 / span 4;
  grid-column: 1 / span 1;
  width: 20px;
}

